--- a/网址推荐.md
+++ b/网址推荐.md
@@ -11,3 +11,9 @@ https://mp3cut.net/
 https://www.isharebest.com/
 
 https://www.isharebest.com/tags
+
+### **CR TubeGet**
+
+介绍文章：https://www.52pojie.cn/forum.php?mod=viewthread&tid=922607
+
+下载地址：http://www.cr-soft.net/softs/crtubeget.rar
